--- a/frontend/static/html/allusers.html
+++ b/frontend/static/html/allusers.html
@@ -41,13 +41,14 @@
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="allusers.html">Nutzerübersicht</a></li>  <!-- Hab ich nur vorläuftig mal hier hin gepackt zwecks schnellerem Zugriff -->
+                    <li class="active"><a href="allusers.html">All Users</a></li>  <!-- Hab ich nur vorläuftig mal hier hin gepackt zwecks schnellerem Zugriff -->
+                    <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
                     <li><a href="compare.html">Compare Pictures</a></li>
                     <li><a href="profile.html">Profile</a></li>
                     <li class="dropdown">
                         <a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
                         <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                            <li><a href="allusers.html">Nutzerübersicht</a></li>
+                            <li><a href="allusers.html">All Users</a></li>
                             <li><a href="#">Help</a></li>
                             <li><a href="#">AGB's</a></li>
                             <li role="separator" class="divider"></li>
