--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -42,8 +42,7 @@
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
           <ul class="nav navbar-nav navbar-right">
-              <li><a href="shootoutÜbersicht.html">Shootouts</a></li>
-              <li><a href="shootoutRanking.html">Ranking</a></li>
+            <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
             <li><a href="compare.html">Compare Pictures</a></li>
             <li class="active"><a href="profile.html">Profile</a></li>
               <li class="dropdown">
